--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,19 @@
 .black-border {
   border: 1px solid black;
 }
+
+.red-border {
+  border: 1px solid red;
+}
+
+.green-border {
+  border: 1px solid green;
+}
+
+.blue-border {
+  border: 1px solid blue;
+}
+
+.container-width {
+  max-width: 80rem;
+}
